--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,24 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "nelmio/cors-bundle": "^1.5",
+        "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/orm-pack": "^1.0",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.11",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
@@ -54,7 +65,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "4.3.*"
         }
     }
