--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+api:
+    prefix: /api
+    resource: '../src/Controller'
+
+document:
+    type: rest
+    resource: App\Controller\DocumentController
