--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "beelab/tag-bundle": "^1.4",
         "friendsofsymfony/rest-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
